// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpProgressReducer BEGIN should return state with processing true and new entry in proccess list and url 1`] = `
Object {
  "processList": Array [
    true,
  ],
  "processing": true,
  "url": "/test_begin",
}
`;

exports[`HttpProgressReducer COMPLETE should remove elem in process list, set url and set processing to false 1`] = `
Object {
  "processList": Array [],
  "processing": false,
  "url": "/test_complete",
}
`;

exports[`HttpProgressReducer Selectors getProcessList shoud retrieve process list 1`] = `
Array [
  true,
  true,
  true,
]
`;

exports[`HttpProgressReducer Selectors getProcessing shoud retrieve processing (true) 1`] = `true`;

exports[`HttpProgressReducer undefined action should return the default state 1`] = `
Object {
  "processList": Array [],
  "processing": false,
  "url": "",
}
`;
